// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json: /path/to/project1/src/App.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n>
{
  \\"en\\": {
    \\"title\\": \\"Application\\"
  },
  \\"ja\\": {
    \\"title\\": \\"アプリケーション\\"
  }
}
</i18n>"
`;

exports[`json: /path/to/project1/src/components/Modal.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n locale=\\"en\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"Cancel\\"
}
</i18n>

<i18n locale=\\"ja\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"キャンセル\\"
}
</i18n>"
`;

exports[`json: /path/to/project1/src/components/nest/RankingTable.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n locale=\\"en\\">
{
  \\"headers\\": {
    \\"rank\\": \\"Rank\\",
    \\"name\\": \\"Name\\",
    \\"score\\": \\"Score\\"
  }
}
</i18n>

<i18n locale=\\"ja\\" lang=\\"json\\">
{
  \\"headers\\": {
    \\"rank\\": \\"ランク\\",
    \\"name\\": \\"名前\\",
    \\"score\\": \\"スコア\\"
  }
}
</i18n>"
`;

exports[`json: /path/to/project1/src/pages/Dashboard1.vue 1`] = `
"<template>
  <p>this is the dashboard1</p>
</template>

<script>
export default {
  name: 'Dashboard1'
}
</script>

<i18n>
{
  \\"ja\\": {
    \\"title\\": \\"ダッシュボード\\"
  }
}
</i18n>

<i18n>
{
  \\"ja\\": {
    \\"loading\\": \\"読込中...\\"
  }
}
</i18n>"
`;

exports[`json: /path/to/project1/src/pages/Dashboard2.vue 1`] = `
"<template>
  <p>this is the dashboard2</p>
</template>

<script>
export default {
  name: 'Dashboard2'
}
</script>

<i18n locale=\\"ja\\">
{
  \\"title\\": \\"ダッシュボード\\"
}
</i18n>

<i18n locale=\\"ja\\">
{
  \\"loading\\": \\"読込中...\\"
}
</i18n>"
`;

exports[`json: /path/to/project1/src/pages/Login.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n>
{
  \\"ja\\": {
    \\"id\\": \\"ユーザーID\\",
    \\"passowrd\\": \\"パスワード\\",
    \\"confirm\\": \\"パスワードの確認入力\\",
    \\"button\\": \\"ログイン\\"
  }
}
</i18n>

<i18n locale=\\"en\\" lang=\\"json\\">
{
  \\"id\\": \\"User ID\\",
  \\"password\\": \\"Password\\",
  \\"confirm\\": \\"Confirm Password\\",
  \\"button\\": \\"Login\\"
}
</i18n>"
`;

exports[`json5: /path/to/project1/src/components/Modal.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n lang=\\"json5\\" locale=\\"en\\">
{
  ok: 'OK',
  cancel: 'Cancel',
}
</i18n>

<i18n locale=\\"ja\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"キャンセル\\"
}
</i18n>

<i18n locale=\\"en\\" lang=\\"json5\\">
{
  id: 'User ID',
  password: 'Password',
  confirm: 'Confirm Password',
  button: 'Login',
}
</i18n>

<i18n locale=\\"ja\\" lang=\\"json5\\">
{
  headers: {
    rank: 'ランク',
    name: '名前',
    score: 'スコア',
  },
}
</i18n>"
`;

exports[`not full localitation: /path/to/project1/src/App.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n>
{
  \\"en\\": {
    \\"title\\": \\"Application\\"
  },
  \\"ja\\": {
    \\"title\\": \\"アプリケーション\\"
  }
}
</i18n>"
`;

exports[`not full localitation: /path/to/project1/src/components/Modal.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n locale=\\"en\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"Cancel\\"
}
</i18n>

<i18n locale=\\"ja\\">
{
  \\"ok\\": \\"OK\\",
  \\"cancel\\": \\"キャンセル\\"
}
</i18n>

<i18n locale=\\"ja\\" lang=\\"json5\\">
{
  headers: {
    rank: 'ランク',
    name: '名前',
    score: 'スコア',
  },
}
</i18n>"
`;

exports[`not full localitation: /path/to/project1/src/components/nest/RankingTable.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n locale=\\"en\\">
{
  \\"headers\\": {
    \\"rank\\": \\"Rank\\",
    \\"name\\": \\"Name\\",
    \\"score\\": \\"Score\\"
  }
}
</i18n>"
`;

exports[`not full localitation: /path/to/project1/src/pages/Dashboard1.vue 1`] = `
"<template>
  <p>this is the dashboard1</p>
</template>

<script>
export default {
  name: 'Dashboard1'
}
</script>

<i18n>
{
  \\"ja\\": {
    \\"title\\": \\"ダッシュボード\\"
  }
}
</i18n>

<i18n>
{
  \\"ja\\": {
    \\"loading\\": \\"読込中...\\"
  }
}
</i18n>"
`;

exports[`not full localitation: /path/to/project1/src/pages/Dashboard2.vue 1`] = `
"<template>
  <p>this is the dashboard2</p>
</template>

<script>
export default {
  name: 'Dashboard2'
}
</script>

<i18n locale=\\"ja\\">
{
  \\"title\\": \\"ダッシュボード\\"
}
</i18n>

<i18n locale=\\"ja\\">
{
  \\"loading\\": \\"読込中...\\"
}
</i18n>"
`;

exports[`not full localitation: /path/to/project1/src/pages/Login.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n>
{
  \\"ja\\": {
    \\"id\\": \\"ユーザーID\\",
    \\"passowrd\\": \\"パスワード\\",
    \\"confirm\\": \\"パスワードの確認入力\\",
    \\"button\\": \\"ログイン\\"
  }
}
</i18n>"
`;

exports[`yaml: /path/to/project1/src/components/Modal.vue 1`] = `
"<template>
  <p>template</p>
</template>

<script>
export default {}
</script>

<i18n lang=\\"yaml\\" locale=\\"en\\">
ok: OK
cancel: Cancel
</i18n>

<i18n lang=\\"yml\\" locale=\\"ja\\">
ok: OK
cancel: キャンセル
</i18n>

<i18n locale=\\"en\\" lang=\\"yaml\\">
id: User ID
password: Password
confirm: Confirm Password
button: Login
</i18n>

<i18n locale=\\"ja\\" lang=\\"yml\\">
headers:
  rank: ランク
  name: 名前
  score: スコア
</i18n>"
`;
